# python-template

./: .gitignore  README.md  cookiecutter.json  run_cookiecutter.sh
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pixi.toml  pyproject.toml
{{ cookiecutter.project_slug }}/config/: config.yaml
{{ cookiecutter.project_slug }}/src/{{cookiecutter.module_name}}/: __main__.py  main.py  util.py  version.py
{{ cookiecutter.project_slug }}/tests/{{cookiecutter.module_name}}/: test_main.py
{{ cookiecutter.project_slug }}/{{cookiecutter.module_name}}/: __main__.py  main.py  util.py
